fixed dropdown and overflow to visible on navbar

--- a/app/assets/stylesheets/general/clearfix.scss
+++ b/app/assets/stylesheets/general/clearfix.scss
@@ -1,5 +1,5 @@
 div {
-  overflow: inherit;
+  overflow: visible;
   zoom: 1;
   box-sizing: border-box;
   position: relative;
