--- a/app/assets/stylesheets/navbar/navbar.scss
+++ b/app/assets/stylesheets/navbar/navbar.scss
@@ -17,12 +17,8 @@
     display: none;
   }
 }
-.user-status, .navbar__user-section {
-  float: right;
-}
 
 .navbar__content {
-  overflow: auto;
   margin: 0 auto;
   max-width: $content-width;
 
@@ -88,6 +84,9 @@
 }
 
 .navbar__user-section {
+  margin-left: auto;
+  margin-right: 0px;
+  max-width: 70px;
 
   .session-btn {
     float: right;
@@ -181,6 +180,7 @@
   .dropdown__list {
     @include white-box-grey-border;
     padding: 5px 10px;
+    width: 150px;
 
     .dropdown__item {
       font-family: $heiti;
